OpenJMLTest/test/staticOld/expected
test/staticOld/NullableOld.java:7: error: No Java modifiers are allowed in a old clause declaration: static
    //@ old static Object o = oo;
            ^
Operation not performed because of parse or type errors
1 error
